# rustic-toy-chest

./: Cargo.toml  LICENSE  Makefile.toml  README.md  bootstrap.sh
actix-mock-tracing/: Cargo.toml
actix-mock-tracing/src/: main.rs
actix-web-api/: Cargo.toml  README.md  build.rs  docker-compose.yml  env.example  generate-JWT-secret.sh  init.sql  postman.collection.json  rustfmt.toml
actix-web-api/scripts/: setup_env.sh
actix-web-api/src/: db.rs  main.rs
actix-web-api/src/models/structs/: blog.rs  mod.rs
actix-web-api/src/routes/: blog.rs  mod.rs
actix-web-api/src/utils/: handle_sql_error.rs
async-snippets/: Cargo.toml
async-snippets/src/: main.rs
basic_capnp/: Cargo.toml  build.rs
basic_capnp/schemas/: person.capnp
basic_capnp/src/: main.rs  person_capnp.rs
behavioral-pattern-memento/: Cargo.toml
behavioral-pattern-memento/src/: main.rs
capn_proto_api_graphql/: Cargo.toml  build.rs
capn_proto_api_graphql/capnp/: service.capnp  starwars.capnp
capn_proto_api_graphql/src/: service_capnp.rs
cdp-proto/: Cargo.toml
cdp-proto/src/: main.rs
chrome-raw-websocket-automation/: Cargo.toml  rustfmt.toml
chrome-raw-websocket-automation/src/: handle_events.rs  main.rs  map_tabs_to_struct.rs  navigate_to_page.rs
futures-custom/: Cargo.toml
futures-custom/src/: custom_future.rs  error_handling.rs  main.rs  perform_basic_request.rs
image-format-optimization/: Cargo.toml
image-format-optimization/src/: main.rs
leptos-todo/: Cargo.toml  Makefile.toml
leptos-todo/src/: app.rs  lib.rs  main.rs
leptos-todo/src/components/: page_wrapper.rs  todo_item.rs
leptos-todo/src/pages/: home.rs
lockfree/: Cargo.toml
lockfree/src/: main.rs  non_locker.rs  non_locking_queue.rs  non_locking_stack.rs  threading_samples.rs
macro-exampled/: Cargo.toml
macro-exampled/src/: animal_behavior_macro.rs  basic_macros.rs  main.rs  procedural_macros.rs  routing_to_functions.rs
macros_first_principles/: Cargo.toml
macros_first_principles/src/: main.rs
mtthreads_arc_and_mutex/: Cargo.toml
mtthreads_arc_and_mutex/src/: main.rs
new-but-old-design-patterns/: Cargo.toml
new-but-old-design-patterns/src/: adapter.rs  command.rs  decorator.rs  facade.rs  factory.rs  iterator.rs  main.rs  observer.rs  state_pattern.rs  strategy.rs
object-structured-patterns/: Cargo.toml
object-structured-patterns/src/: main.rs
one_hundred_kay/: Cargo.toml  docker-compose.yml
one_hundred_kay/src/: main.rs
opentelemetry-from-docs/: Cargo.toml  rustfmt.toml
opentelemetry-from-docs/src/: main.rs
perseus_todo/: .gitignore  Cargo.toml
perseus_todo/src/templates/: error.rs  index.rs  mod.rs
polling-and-futures/: Cargo.toml
polling-and-futures/src/: main.rs
quasi-prod-rust-api/: .env  Cargo.toml  Dockerfile  docker-commands.sh  docker-compose.yml
quasi-prod-rust-api/config/: default.json  production.json
quasi-prod-rust-api/migrations/2024-03-30-213813_create_todos/: up.sql
quasi-prod-rust-api/src/: app.rs  configs.rs  database.rs  main.rs  models.rs  schema.rs
rabbit-hacks/: Cargo.toml
rust-crawl-pupp/: Cargo.toml  rustfmt.toml
rust-crawl-pupp/fixtures/clientside/: delayed-clientside.html  iframe.html  iframe2.html  iframe_server.py  root.html  script.js
rust-crawl-pupp/fixtures/serverside/: flasker.py  index.html  pyproject.toml
rust-crawl-pupp/fixtures/serverside/templates/: download.html  form.html
rust-crawl-pupp/src/: fifth_project.rs  first_project.rs  main.rs  ninth_project.rs  second_project.rs  seventh_project.rs  sixth_project.rs  third_project.rs
select-async/: Cargo.toml
select-async/src/: main.rs
system-calls/: Cargo.toml
system-calls/src/: main.rs
tanti-srch/: Cargo.toml
tanti-srch/src/: main.rs
tauray-app/: Cargo.toml
tauray-app/src-tauri/: Cargo.toml  tauri.conf.json
tauray-app/src-tauri/src/: main.rs
tauri-tray-app/: .gitignore  README.md  pnpm-lock.yaml
thread-rave/: Cargo.toml
thread-rave/src/: main.rs  matrix_mul.rs  mrg_sort.rs  parsum.rs  rayon_custom_it.rs  track_racers.rs
todo-leptos/: Cargo.toml
tokio-n-tracing/: Cargo.toml  rustfmt.toml
tokio-n-tracing/otlp-config/: config.yml
tokio-n-tracing/src/: main.rs
wasm-alert/: Cargo.toml  package-lock.json  package.json  vite.config.js
wasm-vite-rust-basic/: Cargo.toml  package-lock.json  package.json  pnpm-lock.yaml
wasm-vite-rust-basic/app/: index.ts
wasm-vite-rust-basic/src/: lib.rs
workspace_macros/: Cargo.toml
workspace_macros/src/: lib.rs  to_json.rs
worksppace_macros/: Cargo.toml
worksppace_macros/src/: lib.rs
