[package]
name = "actix-mock-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.5.1"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry-otlp = { version = "*", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"]}
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
rand = { version = "0.8.5", features = ["log"] }
tokio = { version = "1.37.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tracing = "0.1.40"
tracing-actix-web = "0.7.10"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
