[package]
name = "actix-web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
argon2 = "0.5.3"
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "uuid", "macros", "runtime-tokio"] }
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["serde"] }
