[package]
name = "chrome-raw-websocket-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", features = ["sink", "tokio-io"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tungstenite = "0.23.0"
url = "2.5.2"
