[package]
name = "chrome-raw-websocket-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.30", features = ["sink", "tokio-io"] }
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tungstenite = "0.23.0"
url = "2.5.2"
