[package]
name = "futures-custom"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
inquire = "0.7.5"
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
