[package]
name = "lockfree"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = { version = "0.8.4", features = ["crossbeam-epoch"] }
futures = "0.3.30"
inquire = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
