[package]
name = "macro-exampled"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
inquire = "0.7.5"
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = { version = "2.0.69", features = ["extra-traits", "full"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
workspace_macros = { path = "../workspace_macros" }
