cargo-features = ["edition2024"]
[package]
name = "opentelemetry-from-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body-util = "0.1.2"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = { version = "0.1.5", features = ["full"] }
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
opentelemetry = { version = "0.16", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16", features = ["tonic"] }
tracing-opentelemetry = "0.16"
