[package]
name = "quasi-prod-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
config = "0.14.0"
diesel = { version = "2.1.4", features = ["postgres_backend"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
temp-env = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
