[package]
name = "quasi-prod-rust-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
config = "0.14.0"
diesel = { version = "2.1.4", features = ["postgres_backend", "r2d2", "postgres"] }
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["reqwest-client", "reqwest-rustls", "http-proto", "tls"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
reqwest = { version = "0.12.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
temp-env = "0.3.6"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "registry"] }
