[package]
name = "rust-crawl-pupp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.12.0"
chromiumoxide = { version = "0.5.7", features = ["tokio", "tokio-runtime"] }
chromiumoxide_cdp = "0.5.2"
clap = { version = "4.5.7", features = ["derive", "cargo"] }
futures = "0.3.30"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
