[package]
name = "tokio-n-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.22.0", features = ["trace", "metrics", "logs"] }
opentelemetry_sdk = { version = "0.22.0", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.15.0", features = ["trace", "metrics", "logs"] }
opentelemetry-semantic-conventions = "0.14.0"
