cargo-features = ["edition2024"]
[package]
name = "wasm-vite-rust-basic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["Window", "console", "Document", "Element", "HtmlBodyElement"] }

[dev-dependencies]
cargo-watch = "8.5.2"
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
