[package]
name = "workspace_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
syn = { version = "2.0.69", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
